<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/getPhoneCallTitle"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/getPhoneCallTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <TextView
        android:id="@+id/getPhoneCallCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/getPhoneCallCaption"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <Button
        android:id="@+id/chatBotButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/chatBotButtonLabel"
        android:onClick="chatBotButtonClicked" />

    <Button
        android:id="@+id/mp3button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/mp3ButtonLabel"
        android:onClick="mp3ButtonClicked" />

    <Button
        android:id="@+id/getPhoneCallBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/backButtonLabel"
        android:onClick="backButtonClicked" />


</LinearLayout>
