<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.menu.ChatBotActivity">

    <TextView
        android:id="@+id/chatBotTitle"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/chatBotTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <TextView
        android:id="@+id/chatBotCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="50dp"
        android:text="@string/chatBotCaption"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <Button
        android:id="@+id/chatBotConfirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#fc4e4e"
        android:text="@string/confirmButton"
        android:onClick="confirmButtonClicked" />

    <Button
        android:id="@+id/chatBotBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/backButtonLabel"
        android:onClick="backButtonClicked" />

</LinearLayout>