<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/getTextTitle"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/getTextTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <TextView
        android:id="@+id/getTextNameInputCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/getTextNameInputCaption"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <EditText
        android:id="@+id/getTextNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/getTextMessageInputCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/getTextMessageInputCaption"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <EditText
        android:id="@+id/getTextMessageInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/getTextConfirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#fc4e4e"
        android:onClick="confirmButtonClicked"
        android:text="@string/confirmButton" />

    <Button
        android:id="@+id/chatBotBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/backButtonLabel"
        android:onClick="backButtonClicked" />
</LinearLayout>