<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/mp3Title"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/mp3Title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <TextView
        android:id="@+id/mp3Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="50dp"
        android:text="@string/mp3SpinnerLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <Spinner
        android:id="@+id/mp3Spinner"
        android:layout_width="fill_parent"
        android:drawSelectorOnTop="true"
        android:entries="@array/mp3s"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/mp3ConfirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#fc4e4e"
        android:text="@string/confirmButton"
        android:onClick="confirmButtonClicked" />/>

    <Button
        android:id="@+id/mp3BackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/backButtonLabel"
        android:onClick="backButtonClicked" />

</LinearLayout>