<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#222"
    android:id="@+id/activity_call"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="lin.jonathan.redtooth.activity.CallActivity"
    android:gravity="center_horizontal"
    android:paddingTop="40dp">

    <TextView
        android:text="@string/carl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/contact_name"
        android:textColor="#bbb"
        android:textSize="36sp"
        android:textAlignment="center"
        android:fontFamily="sans-serif" />

    <TextView
        android:text="@string/_1_800_345_3234"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:id="@+id/contact_number"
        android:textColor="#ccc"
        android:textAlignment="center"
        android:textSize="24sp"
        android:fontFamily="sans-serif-condensed" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        app:srcCompat="@drawable/ic_tag_faces"
        android:id="@+id/contact_avatar" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:id="@+id/options"
        android:background="#2a2a2a"
        android:gravity="center_vertical">

        <Button
            android:text="@string/accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/accept"
            android:backgroundTint="@android:color/holo_green_light"
            android:textColor="@android:color/background_light"
            android:textSize="14sp"
            android:layout_weight="1" />

        <Button
            android:text="@string/end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/end"
            android:backgroundTint="@android:color/holo_red_dark"
            android:textColor="@android:color/background_light"
            android:textSize="14sp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/timer"
            android:text="@string/_00_00"
            android:textColor="#bbb"
            android:textAlignment="center"
            android:textSize="24sp"
            android:layout_weight="1"
            android:visibility="gone"/>
    </LinearLayout>

</LinearLayout>
